--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -30,11 +30,11 @@ jobs:
           fetch-depth: 0
       - uses: pnpm/action-setup@v2
         with:
-          version: "6.23.1"
+          version: 6.23.1
       - uses: actions/setup-node@v2
         with:
-          node-version: "16"
-          cache: "pnpm"
+          node-version: 16
+          cache: pnpm
       - name: Restore Webpack cache
         uses: actions/cache@v2
         with:
