--- a/packages/plugin-infra/package.json
+++ b/packages/plugin-infra/package.json
@@ -9,6 +9,7 @@
     "@dimensiondev/holoflows-kit": "^0.9.0-20210902104757-7c3d0d0",
     "@masknet/shared": "workspace:*",
     "@masknet/shared-base": "workspace:*",
+    "@masknet/web3-shared-base": "workspace:*",
     "@masknet/theme": "workspace:*",
     "@servie/events": "^3.0.0",
     "@types/use-subscription": "^1.0.0",
