--- a/packages/mask/shared-ui/tsconfig.json
+++ b/packages/mask/shared-ui/tsconfig.json
@@ -10,6 +10,7 @@
   },
   "include": ["./", "./**/*.json"],
   "references": [
+    { "path": "../utils-pure" },
     { "path": "../../shared-base" },
     { "path": "../../shared/" },
     { "path": "../../typed-message/base" },
