--- a/packages/provider-proxy/package.json
+++ b/packages/provider-proxy/package.json
@@ -17,6 +17,7 @@
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.6",
+    "@rollup/plugin-replace": "^3.0.1",
     "@rollup/plugin-sucrase": "^4.0.1",
     "date-fns": "^2.27.0",
     "rollup": "^2.60.1",
