feat: simplify create persona (#5468)
* feat: remove Mnemonic verification

* feat: add preview dialog

* feat: add logo for QR code

* fix: typo

* fix: eslint

* fix: eslint

* chore: watermark file name

* fix: download empty image

* fix: icon size & QRCode level

* fix: remove logo

* fix: eslint

* fix: recovery

* fix: QR value

* fix: no persona

* fix: persona already exists

* fix: empty file

* fix: eslint

* chore: ui style

* chore: ui

* feat: update QRCode prefix

* feat: add persona_queryPersonaByPrivateKey api

* fix: reset id when refresh words

* fix: eslint

* chore: nickname existing check

Co-authored-by: guanbinrui <52657989+guanbinrui@users.noreply.github.com>

* chore: useAsync

* fix: validateMnemonic

* fix: prettier & eslint

Co-authored-by: zhouhanseng <z308114274@gmail.com>
Co-authored-by: guanbinrui <52657989+guanbinrui@users.noreply.github.com>

--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -34,12 +34,15 @@
     "color": "^4.1.0",
     "date-fns": "2.27.0",
     "history": "^5.2.0",
+    "html-to-image": "^1.9.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "json-stable-stringify": "^1.0.1",
     "react-avatar-editor": "^12.0.0",
     "react-hook-form": "^7.22.5",
+    "react-qrcode-logo": "^2.5.0",
     "react-router": "6.0.0-beta.0",
     "react-router-dom": "6.0.0-beta.0",
+    "react-to-print": "^2.14.3",
     "react-use": "^17.3.1",
     "unstated-next": "^1.1.0",
     "urlcat": "^2.0.4",
