--- a/packages/web3-providers/package.json
+++ b/packages/web3-providers/package.json
@@ -7,6 +7,7 @@
     "@masknet/plugin-infra": "workspace:*",
     "@masknet/web3-shared-base": "workspace:*",
     "@masknet/web3-shared-evm": "workspace:*",
+    "@masknet/web3-shared-flow": "workspace:*",
     "@masknet/web3-constants": "workspace:*",
     "bignumber.js": "9.0.1",
     "date-fns": "^2.27.0",
