--- a/packages/plugin-infra/tsconfig.json
+++ b/packages/plugin-infra/tsconfig.json
@@ -10,7 +10,7 @@
     { "path": "../shared/" },
     { "path": "../shared-base" },
     { "path": "../theme" },
-    { "path": "../web3-shared/base/src" }
+    { "path": "../web3-shared/base" }
   ],
   "ts-node": {
     "transpileOnly": true,
