--- a/packages/web3-shared/evm/tsconfig.json
+++ b/packages/web3-shared/evm/tsconfig.json
@@ -6,5 +6,5 @@
     "tsBuildInfoFile": "../dist/evm.tsbuildinfo"
   },
   "include": ["./", "./**/*.json"],
-  "references": [{ "path": "../../injected-script/sdk" }, { "path": "../base/src" }]
+  "references": [{ "path": "../../injected-script/sdk" }, { "path": "../base" }]
 }
