fix: type error

--- a/packages/web3-shared/base/package.json
+++ b/packages/web3-shared/base/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@masknet/web3-shared-base",
   "private": true,
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "../dist/base/index.js",
+  "types": "../dist/base/index.d.ts",
   "dependencies": {
     "bignumber.js": "9.0.2",
     "date-fns": "^2.28.0",
