--- a/packages/web3-shared/flow/package.json
+++ b/packages/web3-shared/flow/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@masknet/web3-shared-flow",
   "private": true,
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "../dist/flow/index.js",
+  "types": "../dist/flow/index.d.ts",
   "dependencies": {
     "@blocto/fcl": "^0.0.78-alpha.8",
     "@masknet/web3-constants": "workspace:*",
