--- a/packages/plugin-infra/tsconfig.json
+++ b/packages/plugin-infra/tsconfig.json
@@ -10,6 +10,7 @@
     { "path": "../shared/" },
     { "path": "../shared-base" },
     { "path": "../theme" },
+    { "path": "../encryption" },
     { "path": "../web3-shared/base" }
   ],
   "ts-node": {
