--- a/packages/mask/shared-ui/tsconfig.json
+++ b/packages/mask/shared-ui/tsconfig.json
@@ -14,6 +14,7 @@
     { "path": "../../shared-base" },
     { "path": "../../shared/" },
     { "path": "../../typed-message/base" },
-    { "path": "../../typed-message/dom" }
+    { "path": "../../typed-message/dom" },
+    { "path": "../../theme" }
   ]
 }
