--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -8,7 +8,7 @@
     "@dimensiondev/holoflows-kit": "^0.9.0-20210902104757-7c3d0d0",
     "@dimensiondev/mask-wallet-core": "0.1.0-20211013082857-eb62e5f",
     "@dimensiondev/metamask-extension-provider": "3.0.6-20210519045409-1835d4d",
-    "@dimensiondev/snapshot.js": "0.2.0",
+    "@snapshot-labs/snapshot.js": "^0.3.31",
     "@ethersproject/abi": "^5.4.0",
     "@ethersproject/address": "^5.0.4",
     "@ethersproject/providers": "^5.0.9",
