--- a/packages/web3-shared/evm/package.json
+++ b/packages/web3-shared/evm/package.json
@@ -17,6 +17,7 @@
     "ethereum-blockies": "^0.1.1",
     "fortmatic": "^2.2.1",
     "fuse.js": "^6.5.3",
+    "p-throttle": "^5.0.0",
     "punycode": "^2.1.1",
     "react-use": "^17.3.2",
     "unstated-next": "^1.1.0",
