--- a/packages/web3-providers/package.json
+++ b/packages/web3-providers/package.json
@@ -12,6 +12,8 @@
     "graphql-request": "^3.4.0",
     "bignumber.js": "9.0.2",
     "date-fns": "^2.28.0",
+    "graphql": "^15.5.1",
+    "graphql-request": "^3.4.0",
     "json-stable-stringify": "^1.0.1",
     "lodash-unified": "1.0.2",
     "lru-cache": "^7.7.1",
