--- a/packages/plugins/Terra/package.json
+++ b/packages/plugins/Terra/package.json
@@ -5,13 +5,25 @@
   "types": "./dist/index.d.ts",
   "dependencies": {
     "@masknet/icons": "workspace:*",
+    "@masknet/injected-script": "workspace:*",
     "@masknet/plugin-infra": "workspace:*",
     "@masknet/shared": "workspace:*",
     "@masknet/shared-base": "workspace:*",
     "@masknet/theme": "workspace:*",
+    "@masknet/web3-providers": "workspace:*",
+    "@masknet/web3-shared-base": "workspace:*",
     "@masknet/web3-shared-terra": "workspace:*",
-    "@terra-money/terra.js": "^3.0.2",
-    "bignumber.js": "^9.0.1",
-    "react-use": "^17.3.1"
+    "@terra-money/terra.js": "3.0.6",
+    "@terra-money/core": "2.0.9",
+    "@metaplex-foundation/mpl-token-metadata": "^1.1.0",
+    "@metaplex/js": "^4.11.7",
+    "@solana/spl-token": "^0.1.8",
+    "@solana/spl-token-registry": "^0.2.1301",
+    "@solana/web3.js": "^1.30.2",
+    "bignumber.js": "^9.0.2",
+    "bn.js": "^4.12.0",
+    "bs58": "^4.0.1",
+    "buffer": "^6.0.3",
+    "react-use": "^17.3.2"
   }
 }
