--- a/packages/plugins/Terra/tsconfig.json
+++ b/packages/plugins/Terra/tsconfig.json
@@ -9,10 +9,13 @@
   "include": ["src", "src/**/*.json"],
   "references": [
     { "path": "../../icons" },
+    { "path": "../../injected-script" },
     { "path": "../../plugin-infra" },
     { "path": "../../shared" },
     { "path": "../../shared-base" },
     { "path": "../../theme" },
+    { "path": "../../web3-providers" },
+    { "path": "../../web3-shared/base" },
     { "path": "../../web3-shared/terra" }
   ]
 }
