feat: add markdownlint

--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -21,7 +21,15 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
       - uses: actions/setup-node@v2
-      - run: npx prettier@2.5.0 --list-different .
+      - run: npx prettier@2.5.0 --check .
+  markdownlint:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+      - uses: actions/setup-node@v2
+      - run: npx markdownlint-cli .
   anti-trojan-source:
     runs-on: ubuntu-20.04
     steps:
@@ -38,11 +46,11 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
       - uses: pnpm/action-setup@v2
         with:
-          version: '6.23.1'
+          version: "6.23.1"
       - uses: actions/setup-node@v2
         with:
-          node-version: '16'
-          cache: 'pnpm'
+          node-version: "16"
+          cache: "pnpm"
       - run: pnpm install
       - run: npx gulp locale-kit
   type-check-and-jest:
@@ -57,11 +65,11 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
       - uses: pnpm/action-setup@v2
         with:
-          version: '6.23.1'
+          version: "6.23.1"
       - uses: actions/setup-node@v2
         with:
-          node-version: '16'
-          cache: 'pnpm'
+          node-version: "16"
+          cache: "pnpm"
       - run: pnpm install
       - run: npx gulp codegen
       - run: npx gulp polyfill
@@ -74,11 +82,11 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
       - uses: pnpm/action-setup@v2
         with:
-          version: '6.23.1'
+          version: "6.23.1"
       - uses: actions/setup-node@v2
         with:
-          node-version: '16'
-          cache: 'pnpm'
+          node-version: "16"
+          cache: "pnpm"
       - run: pnpm install
       - run: pnpm run lint:ci
       - name: Upload eslint report
