--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -36,6 +36,7 @@
     "@masknet/web3-providers": "workspace:*",
     "@masknet/web3-shared-base": "workspace:*",
     "@masknet/web3-shared-evm": "workspace:*",
+    "@metamask/eth-sig-util" : "^4.0.0",
     "@msgpack/msgpack": "^2.7.1",
     "@servie/events": "^3.0.0",
     "@sinonjs/text-encoding": "^0.7.1",
