--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/web": "^0.0.50",
+    "graphql-request": "^4.0.0",
     "i18next": "^21.6.9",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
