--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
-    "typescript": "4.6.0-dev.20211202",
+    "typescript": "4.6.1-rc",
     "webpack": "5.67.0"
   },
   "engines": {
