--- a/packages/plugin-infra/tsconfig.json
+++ b/packages/plugin-infra/tsconfig.json
@@ -13,7 +13,7 @@
     { "path": "../web3-shared/base" }
   ],
   "ts-node": {
-    "transpileOnly": true,
+    "swc": true,
     "compilerOptions": { "module": "CommonJS" }
   }
 }
