--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "@types/masknet__global-types": "workspace:*",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
-    "graphql-request": "^4.0.0",
     "@types/web": "^0.0.52",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.0.0",
     "i18next": "^21.6.11",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
