--- a/packages/provider-proxy/package.json
+++ b/packages/provider-proxy/package.json
@@ -2,7 +2,7 @@
   "name": "@dimensiondev/provider-proxy",
   "version": "0.0.1",
   "scripts": {
-    "build:rollup": "rollup -c",
+    "build:rollup": "rollup -c --environment PROXY_VERSION:$PROXY_VERSION",
     "build": "node ./build.mjs"
   },
   "dependencies": {
