--- a/packages/mask/src/tsconfig.json
+++ b/packages/mask/src/tsconfig.json
@@ -14,6 +14,7 @@
   // !       do not add dashboard/ as a reference otherwise there is a circular dependency on the type level.
   "references": [
     { "path": "../../public-api" },
+    { "path": "../../background-service" },
     { "path": "../../shared" },
     { "path": "../../shared-base" },
     { "path": "../../web3-shared/base" },
