Revert "refactor: move plugin to own package"
This reverts commit ef12cb7c8adb52c4b0d1dc519b1c4c8645a4399f.

--- a/packages/plugins/tsconfig.json
+++ b/packages/plugins/tsconfig.json
@@ -7,7 +7,6 @@
     { "path": "./Wallet/" },
     { "path": "./FileService/" },
     { "path": "./RSS3/" },
-    { "path": "./DAO/" },
-    { "path": "./CyberConnect/" }
+    { "path": "./DAO/" }
   ]
 }
