--- a/packages/plugins/CyberConnect/tsconfig.json
+++ b/packages/plugins/CyberConnect/tsconfig.json
@@ -3,8 +3,13 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
-    "tsBuildInfoFile": "dist/.tsbuildinfo",
+    "tsBuildInfoFile": "dist/.tsbuildinfo"
   },
   "include": ["src", "src/**/*.json"],
-  "references": [{ "path": "../../plugin-infra" }, { "path": "../../theme" }, { "path": "../../shared-base" }, { "path": "../../web3-shared/evm" }]
+  "references": [
+    { "path": "../../plugin-infra" },
+    { "path": "../../theme" },
+    { "path": "../../shared-base" },
+    { "path": "../../web3-shared/evm" }
+  ]
 }
