--- a/packages/background-service/tsconfig.json
+++ b/packages/background-service/tsconfig.json
@@ -3,7 +3,11 @@
   "compilerOptions": {
     "rootDir": "./src/",
     "outDir": "./dist/",
-    "tsBuildInfoFile": "./dist/.tsbuildinfo"
+    "tsBuildInfoFile": "./dist/.tsbuildinfo",
+    "emitDeclarationOnly": true,
+    // MV3 = WebWorker, MV2 = DOM
+    // but we cannot build the same code in two env
+    "lib": ["ES2021", "WebWorker"]
   },
   "include": ["./src"],
   "references": [{ "path": "../shared" }, { "path": "../shared-base" }]
