chore: update pnpm
This reverts commit 1a92ea41f58af87cbb81f81c80fe3120e3b80e9d.

--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -14,7 +14,7 @@
     "@ethersproject/solidity": "^5.0.4",
     "@hookform/resolvers": "2.8.8",
     "@masknet/dashboard": "workspace:*",
-    "@masknet/encryption": "workspace:^0.0.0",
+    "@masknet/encryption": "workspace:*",
     "@masknet/external-plugin-previewer": "workspace:*",
     "@masknet/icons": "workspace:*",
     "@masknet/injected-script": "workspace:*",
