feat: npx gulp create-package

--- a/packages/plugins/tsconfig.json
+++ b/packages/plugins/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "references": [
+    { "path": "./template/" },
     { "path": "./example/" },
     { "path": "./Debugger/" },
     { "path": "./Flow/" },
