--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -8,12 +8,15 @@
   "dependencies": {
     "@types/rimraf": "^3.0.2",
     "chalk": "^4.1.2",
+    "enquirer": "^2.3.6",
+    "fs-extra": "^10.0.0",
     "gulp-zip": "^5.1.0",
     "proper-lockfile": "^4.1.1",
     "rimraf": "^3.0.2",
     "yargs": "^17.3.1"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.13",
     "@types/gulp": "^4.0.9",
     "@types/lodash": "^4.14.178",
     "@types/proper-lockfile": "^4.1.2",
