--- a/packages/plugins/tsconfig.json
+++ b/packages/plugins/tsconfig.json
@@ -1,13 +1,14 @@
 {
-  "extends": "../../tsconfig.json",
-  "references": [
-    { "path": "./template/" },
-    { "path": "./example/" },
-    { "path": "./Debugger/" },
-    { "path": "./Flow/" },
-    { "path": "./Wallet/" },
-    { "path": "./FileService/" },
-    { "path": "./RSS3/" },
-    { "path": "./DAO/" }
-  ]
+    "extends": "../../tsconfig.json",
+    "references": [
+        { "path": "./template/" },
+        { "path": "./example/" },
+        { "path": "./Debugger/" },
+        { "path": "./Flow/" },
+        { "path": "./Wallet/" },
+        { "path": "./FileService/" },
+        { "path": "./RSS3/" },
+        { "path": "./DAO/" },
+        { "path": "./Play/" }
+    ]
 }
