feat: npx gulp new-pkg (#5668)
* feat: npx gulp create-package

* feat: npx gulp create-package

* feat: npx gulp create-package

* feat: npx gulp create-package

* feat: npx gulp create-package

* chore: remove --deps option in clean script cause it does not work with swc

* feat: npx gulp create-package

* feat: npx gulp create-package

* feat: npx gulp create-package

* feat: npx gulp create-package

* feat: npx gulp create-package

* feat: npx gulp create-package

* feat: npx gulp create-package

* feat: npx gulp create-package

* docs: update docs

* feat: npx gulp create-package

* feat: npx gulp create-package

* fix: ci

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -26,6 +26,7 @@ packages:
   - 'packages/icons'
   - 'packages/theme'
   - 'packages/plugin-infra'
+  - 'packages/plugins/template'
   - 'packages/plugins/example'
   - 'packages/plugins/Debugger'
   - 'packages/plugins/Wallet'
