fix: try disabling eslint cache

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "codegen": "gulp codegen-watch",
     "build": "build",
     "build-ios": "build --preset iOS",
-    "lint": "eslint -c packages/.eslintrc.json packages --ext .ts,.tsx,.js --cache --fix",
-    "lint:ci": "eslint -c packages/.eslintrc.json packages --ext .ts,.tsx,.js --cache --format=junit --output-file=reports/junit/eslint-results.xml",
+    "lint": "eslint -c packages/.eslintrc.json packages --ext .ts,.tsx,.js --fix",
+    "lint:ci": "eslint -c packages/.eslintrc.json packages --ext .ts,.tsx,.js --format=junit --output-file=reports/junit/eslint-results.xml",
     "preinstall": "npx only-allow pnpm",
     "postinstall": "patch-package",
     "prepare": "husky install",
