--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,19 +21,23 @@
   ],
   "compilerOptions": {
     "paths": {
-      // # Why?
-      // TypeScript project reference requires manually declare all refernced projects.
-      //
+      # Why?
+      // TypeScript project reference requires manually declaring all referenced projects.
+
       // For example, we have 2 projects A and B under /projects/a and /projects/b and B depends on A,
-      // if we not list A in the references, when we writes
-      //    # /packages/b/src/index.ts
-      //    import { something } from '../../a'
-      //
+      // if we do not list A in the references, when we write
+
+      // > /packages/b/src/index.ts
+
+      // ```ts
+      // import { something } from '../../a'
+      // ```
+
       // If there is no "reference": [{ "path": "../a/tsconfig.json" }] in /packages/b/tsconfig.json,
-      // TypeScript will complain TS6307: "File '/packages/b/src/index.ts' is not listed within the file list of project '/packages/b/tsconfig.json'. Projects must list all files or use an 'include' pattern."
-      //
+      // TypeScript will complain TS6307: "File '/packages/b/src/index.ts' is not listed within the file list of the project '/packages/b/tsconfig.json'. Projects must list all files or use an 'include' pattern."
+
       // This is error is GOOD because it means TypeScript _can_ automatically detect the missing references.
-      //
+
       // # What about monorepo?
       // But TypeScript cannot detect the missing references when we install them as monorepo packages.
       // Still the project structure above, but A is installed as "@masknet/a" in /packages/b/node_modules/@masknet/a,
@@ -41,17 +45,18 @@
       // because it will go through the "moduleResolution": "Node" resolution, if `.d.ts` file is found,
       // the project will _accidentally_ compiles, but TypeScript does DON'T know those packages has dependencies in the project reference graph.
       // This will cause the project to randomly fail to be type-checked.
-      //
+
       // # Solution
       // We use "paths" to map the Node-style import path back to the relative style,
       // therefore TypeScript can check the missing dependencies again.
-      //
+
       // This will not introduce problems like mapping "@src/" to "/packages/a/src" which is problematic,
       // because those projects (if they're correctly configured) is installed in the node_modules,
       // so if any toolchain does not support the "paths" feature, it will still work.
-      //
+
       // This will bring another problem: now we can reference a project without installing it as a monorepo dependencies,
       // which is unwanted. We need to take care of this.
+
       "@masknet/backup-format": ["./packages/backup-format/src"],
       // ! dashboard is explicitly opt-out of this feature, it and the /packages/mask has circulare reference that TypeScript does not allows.
       // "@masknet/dashboard": ["./packages/dashboard/src"],
