--- a/tsconfig.json
+++ b/tsconfig.json
@@ -95,6 +95,7 @@
       "@masknet/plugin-rss3": ["./packages/plugins/RSS3/src"],
       "@masknet/plugin-solana": ["./packages/plugins/Solana/src"],
       "@masknet/plugin-template": ["./packages/plugins/template/src"],
+      "@masknet/plugin-cyber-connect": ["./packages/plugins/CyberConnect/src"],
       // @masknet/scripts: insert-here 3
       "@masknet/plugin-wallet": ["./packages/plugins/Wallet/src"]
     },
