--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@commitlint/config-conventional": "^16.0.0",
     "@dimensiondev/eslint-plugin": "^0.0.1-20220117062517-fd3cb01",
     "@dimensiondev/patch-package": "^6.5.0",
-    "@jest/globals": "^27.5.1",
+    "@jest/globals": "^28.0.0-alpha.3",
     "@magic-works/i18n-codegen": "^0.0.6",
     "@masknet/cli": "workspace:*",
     "@masknet/serializer": "workspace:^0.0.0",
@@ -68,7 +68,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "gulp": "^4.0.2",
     "husky": "^7.0.4",
-    "jest": "^27.5.1",
+    "jest": "^28.0.0-alpha.3",
     "lint-staged": "^12.3.3",
     "only-allow": "^1.0.0",
     "prettier": "^2.5.1",
