--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     { "path": "./packages/encryption/tsconfig.tests.json" },
     { "path": "./packages/shared-base/tsconfig.tests.json" },
     // All plugins should be type checked too
-    { "path": "./packages/plugins" }
+    { "path": "./packages/plugins" },
+    { "path": "./packages/runtimes" }
   ],
   "compilerOptions": {
     "paths": {
@@ -100,7 +101,10 @@
       "@masknet/plugin-template": ["./packages/plugins/template/src"],
       "@masknet/plugin-cyberconnect": ["./packages/plugins/CyberConnect/src"],
       // @masknet/scripts: insert-here 3
-      "@masknet/plugin-wallet": ["./packages/plugins/Wallet/src"]
+      "@masknet/plugin-wallet": ["./packages/plugins/Wallet/src"],
+
+      // Runtimes
+      "@masknet/ui-runtime": ["./packages/runtimes/ui/src"]
     },
     // Classification follows https://www.typescriptlang.org/tsconfig
 
