--- a/packages/plugin-infra/package.json
+++ b/packages/plugin-infra/package.json
@@ -17,7 +17,8 @@
     "bignumber.js": "^9.0.2",
     "react-use": "^17.3.2",
     "unstated-next": "^1.1.0",
-    "use-subscription": "^1.5.1"
+    "use-subscription": "^1.5.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "react-i18next": "^11.15.4"
