--- a/tsconfig.json
+++ b/tsconfig.json
@@ -58,6 +58,7 @@
       // which is unwanted. We need to take care of this.
 
       "@masknet/backup-format": ["./packages/backup-format/src"],
+      "@masknet/configuration": ["./packages/configuration/src"],
       // ! dashboard is explicitly opt-out of this feature, it and the /packages/mask has circulare reference that TypeScript does not allows.
       // "@masknet/dashboard": ["./packages/dashboard/src"],
       "@masknet/encryption": ["./packages/encryption/src"],
