Revert "feat: delegate sns query"
This reverts commit c6f9b512d29fcb1d61d8122aaff544bbd8d0d3ef.

--- a/packages/public-api/tsconfig.json
+++ b/packages/public-api/tsconfig.json
@@ -3,9 +3,7 @@
   "compilerOptions": {
     "rootDir": "./src/",
     "outDir": "./dist/",
-    "tsBuildInfoFile": "./dist/.tsbuildinfo",
-    // NOT including web or node.
-    "types": []
+    "tsBuildInfoFile": "./dist/.tsbuildinfo"
   },
   "include": ["./src"],
   // This package MUST NOT use any other package.
