--- a/packages/plugins/FileService/tsconfig.json
+++ b/packages/plugins/FileService/tsconfig.json
@@ -13,6 +13,7 @@
     { "path": "../../shared-base" },
     { "path": "../../shared" },
     { "path": "../../icons" },
+    { "path": "../../web3-kit" },
     { "path": "../Wallet" }
   ]
 }
