--- a/packages/mask/shared-ui/tsconfig.json
+++ b/packages/mask/shared-ui/tsconfig.json
@@ -15,6 +15,7 @@
     { "path": "../../shared/" },
     { "path": "../../typed-message/base" },
     { "path": "../../typed-message/dom" },
-    { "path": "../../theme" }
+    { "path": "../../theme" },
+    { "path": "../../plugin-infra" }
   ]
 }
