--- a/packages/plugins/DAO/tsconfig.json
+++ b/packages/plugins/DAO/tsconfig.json
@@ -13,6 +13,7 @@
     { "path": "../../shared" },
     { "path": "../../shared-base" },
     { "path": "../../theme" },
-    { "path": "../../web3-providers" }
+    { "path": "../../web3-providers" },
+    { "path": "../../configuration" }
   ]
 }
