chore: change tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -105,15 +105,16 @@
     // Type Checking
     "strict": true,
     // exactOptionalPropertyTypes: false,
-    "noImplicitOverride": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
+    "noImplicitOverride": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     // noPropertyAccessFromIndexSignature: false,
     // noUncheckedIndexedAccess: false,
     // noUnusedLocals: false,
     // noUnusedParameters: false,
+    "useUnknownInCatchVariables": true,
 
     // Modules
     "module": "ESNext",
@@ -126,6 +127,8 @@
     "declaration": true,
     "declarationMap": true,
     "importsNotUsedAsValues": "error",
+    "noEmitOnError": true,
+    // "preserveValueImports": true,
     "sourceMap": true,
     "stripInternal": true, // skip type emit for @internal types
 
