--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -52,7 +52,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.head.sha }}
-      - uses: pnpm/action-setup@v2
+      - uses: pnpm/action-setup@fix
       - uses: actions/setup-node@v2
         with:
           node-version: "16"
@@ -69,7 +69,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.head.sha }}
-      - uses: pnpm/action-setup@v2
+      - uses: pnpm/action-setup@fix
         with:
           version: "6.32.0"
       - uses: actions/setup-node@v2
@@ -86,7 +86,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.head.sha }}
-      - uses: pnpm/action-setup@v2
+      - uses: pnpm/action-setup@fix
         with:
           version: "6.32.0"
       - uses: actions/setup-node@v2
