--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
-      - uses: pnpm/action-setup@fix
+      - uses: pnpm/action-setup@2
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
