fix: rename runtimes to runtime

--- a/packages/dashboard/tsconfig.json
+++ b/packages/dashboard/tsconfig.json
@@ -21,6 +21,6 @@
     { "path": "../plugins/Wallet/" },
     { "path": "../backup-format/" },
     { "path": "../shared-base" },
-    { "path": "../runtimes/ui" }
+    { "path": "../runtime/ui" }
   ]
 }
