--- a/packages/runtime/ui/tsconfig.json
+++ b/packages/runtime/ui/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "./dist/src/",
+    "outDir": "./dist/",
     "tsBuildInfoFile": "./dist/src.tsbuildinfo"
   },
   "include": ["./src"],
