chore: disable all scripts to be installed

--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
   "pnpm": {
     "overrides": {
       "@types/node": "^17.0.17"
-    }
+    },
+    "onlyBuiltDependencies": ["fsevents"]
   }
 }
