--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -133,6 +133,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
+    "binaryen": "^106.0.0",
     "copy-webpack-plugin": "^10.2.4",
     "html-webpack-plugin": "^5.5.0",
     "react-devtools-core": "^4.23.0",
