--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -10,6 +10,7 @@
     { "path": "../web3-shared/evm" },
     { "path": "../theme" },
     { "path": "../shared-base" },
-    { "path": "../icons" }
+    { "path": "../icons" },
+    { "path": "../plugin-infra" }
   ]
 }
