--- a/tsconfig.json
+++ b/tsconfig.json
@@ -99,6 +99,7 @@
       "@masknet/plugin-solana": ["./packages/plugins/Solana/src"],
       "@masknet/plugin-template": ["./packages/plugins/template/src"],
       "@masknet/plugin-cyberconnect": ["./packages/plugins/CyberConnect/src"],
+      "@masknet/plugin-transak": ["./packages/plugins/Transak/src"],
       // @masknet/scripts: insert-here 3
       "@masknet/plugin-wallet": ["./packages/plugins/Wallet/src"]
     },
