--- a/packages/dashboard/tsconfig.json
+++ b/packages/dashboard/tsconfig.json
@@ -19,6 +19,7 @@
     { "path": "../plugin-infra" },
     { "path": "../plugins/Flow/" },
     { "path": "../plugins/Wallet/" },
+    { "path": "../plugins/Transak" },
     { "path": "../backup-format/" },
     { "path": "../shared-base" }
   ]
