--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -47,9 +47,9 @@
     "@types/bn.js": "^4.11.6",
     "@types/d3": "5.16.4",
     "@types/elliptic": "^6.4.14",
-    "@types/json-stable-stringify": "^1.0.33",
+    "@types/json-stable-stringify": "^1.0.34",
     "@types/json2csv": "^5.0.3",
-    "@types/node": "^17.0.17",
+    "@types/node": "^17.0.21",
     "@types/react-highlight-words": "^0.16.4",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
@@ -99,7 +99,7 @@
     "react-draggable": "^4.4.4",
     "react-feather": "^2.0.9",
     "react-highlight-words": "^0.17.0",
-    "react-hook-form": "7.27.0",
+    "react-hook-form": "7.27.1",
     "react-router-dom": "^5.3.0",
     "react-transition-group": "^4.4.2",
     "react-use": "^17.3.2",
@@ -125,20 +125,21 @@
     "web3-utils": "1.5.2",
     "webextension-polyfill": "^0.8.0",
     "z-schema": "^5.0.2",
-    "zod": "3.11.6"
+    "zod": "3.13.4"
   },
   "devDependencies": {
     "@dimensiondev/webextension-shim": "0.0.3-20210823035705-4257e12",
     "@nice-labs/emit-file-webpack-plugin": "^1.1.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
     "copy-webpack-plugin": "^10.2.4",
     "html-webpack-plugin": "^5.5.0",
     "react-devtools-core": "^4.23.0",
     "react-refresh": "^0.11.0",
     "source-map-loader": "^3.0.1",
     "swc-loader": "^0.1.15",
+    "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
     "webpack-target-webextension": "^1.0.2"
