--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@mui/system": "5.4.4",
     "@types/masknet__global-types": "workspace:*",
     "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.13",
+    "@types/react-dom": "17.0.11",
     "@types/web": "^0.0.54",
     "i18next": "^21.6.13",
     "lodash": "^4.17.21",
