--- a/packages/shared-base/package.json
+++ b/packages/shared-base/package.json
@@ -19,11 +19,11 @@
     "bignumber.js": "^9.0.2",
     "idb": "^7.0.0",
     "immer": "^9.0.12",
-    "pvtsutils": "^1.2.1",
+    "pvtsutils": "^1.2.2",
     "react": "../empty",
-    "tiny-secp256k1": "^2.2.0",
+    "tiny-secp256k1": "^2.2.1",
     "typeson": "^6.1.0",
-    "typeson-registry": "^1.0.0-alpha.38",
+    "typeson-registry": "^2.0.0",
     "use-subscription": "^1.5.1",
     "z-schema": "^5.0.2"
   }
