fix: should show address selector when nft list is empty

--- a/.github/workflows/deploy-proxy.yml
+++ b/.github/workflows/deploy-proxy.yml
@@ -32,6 +32,7 @@ jobs:
           registry: true
       - run: pnpm install
       - run: pnpm build
+      - run: pnpm build
         working-directory: packages/provider-proxy
       - run: npm publish
         working-directory: packages/provider-proxy/dist
