--- a/.github/workflows/deploy-proxy.yml
+++ b/.github/workflows/deploy-proxy.yml
@@ -32,6 +32,9 @@ jobs:
           registry: true
       - run: pnpm install
       - run: pnpm build
+        name: Build solution
+      - run: pnpm build
+        name: Build provider-proxy Package
         working-directory: packages/provider-proxy
       - run: npm publish
         working-directory: packages/provider-proxy/dist
