--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -34,14 +34,13 @@
     "classnames": "^2.3.1",
     "color": "^4.2.1",
     "date-fns": "2.28.0",
-    "history": "^5.2.0",
     "html-to-image": "^1.9.0",
     "i18next-browser-languagedetector": "^6.1.3",
     "json-stable-stringify": "^1.0.1",
     "react-avatar-editor": "^12.0.0",
     "react-hook-form": "^7.27.1",
     "react-qrcode-logo": "^2.5.0",
-    "react-router-dom": "6.0.0-beta.0",
+    "react-router-dom": "^6.2.2",
     "react-to-print": "^2.14.4",
     "react-use": "^17.3.2",
     "unstated-next": "^1.1.0",
