refactor: wc as injected provider

--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -61,7 +61,7 @@
     "@uniswap/sdk-core": "^3.0.1",
     "@uniswap/v2-sdk": "3.0.0-alpha.2",
     "@uniswap/v3-sdk": "^3.3.2",
-    "@walletconnect/client": "^1.2.2",
+    "@walletconnect/web3-provider": "^1.7.4",
     "anchorme": "^2.1.2",
     "assert": "^2.0.0",
     "async-call-rpc": "^6.0.1",
