chore: disable eslint-plugin-prettier
it's slow and not friendly to workflow.
and we already have prettier as a formatter

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "build": "build",
     "build-ios": "build --preset iOS",
     "lint": "eslint -c packages/.eslintrc.json packages --ext .ts,.tsx,.js --cache --fix",
-    "lint:ci": "eslint -c packages/.eslintrc.json packages --ext .ts,.tsx,.js --cache --format=junit --output-file=reports/junit/eslint-results.xml",
+    "lint:ci": "eslint -c packages/.eslintrc.json packages --ext .ts,.tsx,.js --cache",
+    "lint:ci-report": "pnpm lint:ci -- --format=junit --output-file=reports/junit/eslint-results.xml",
     "postinstall": "patch-package",
     "prepare": "husky install",
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
@@ -65,9 +66,7 @@
     "@typescript-eslint/experimental-utils": "^5.14.0",
     "cspell": "^5.18.5",
     "eslint": "8.10.0",
-    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-unicorn": "^41.0.0",
