fix: asset contract address

--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -75,6 +75,7 @@
     "d3": "^5.16.0",
     "date-fns": "^2.28.0",
     "elliptic": "^6.5.3",
+    "ethereum-types": "^3.6.1",
     "ethereumjs-util": "^7.1.0",
     "ethjs-ens": "^2.0.1",
     "event-iterator": "^2.0.0",
@@ -92,7 +93,7 @@
     "json2csv": "^5.0.6",
     "millify": "^4.0.0",
     "next-tick": "^1.0.0",
-    "opensea-js": "^1.2.7",
+    "opensea-js": "^3.0.1",
     "promievent": "^0.1.4",
     "protobufjs": "^6.11.2",
     "react-draggable": "^4.4.4",
