--- a/packages/web3-shared/evm/package.json
+++ b/packages/web3-shared/evm/package.json
@@ -5,6 +5,7 @@
   "types": "./dist/index.d.ts",
   "sideEffects": false,
   "dependencies": {
+    "@dimensiondev/holoflows-kit": "^0.9.0-20210902104757-7c3d0d0",
     "@ensdomains/address-encoder": "^0.2.6",
     "@masknet/shared-base": "workspace:*",
     "@masknet/web3-constants": "workspace:*",
@@ -29,6 +30,7 @@
     "web3-utils": "1.5.2"
   },
   "devDependencies": {
-    "@types/use-subscription": "^1.0.0"
+    "@types/use-subscription": "^1.0.0",
+    "@masknet/injected-script": "*"
   }
 }
