--- a/packages/plugin-infra/tsconfig.json
+++ b/packages/plugin-infra/tsconfig.json
@@ -11,7 +11,8 @@
     { "path": "../shared-base" },
     { "path": "../theme" },
     { "path": "../web3-shared/base" },
-    { "path": "../typed-message/base" }
+    { "path": "../typed-message/base" },
+    { "path": "../encryption" }
   ],
   "ts-node": {
     "swc": true,
