--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postinstall": "patch-package",
     "prepare": "husky install",
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
+    "test:update": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js -u",
     "spellcheck": "cspell lint --no-must-find-files"
   },
   "dependencies": {
