--- a/packages/plugin-infra/tsconfig.json
+++ b/packages/plugin-infra/tsconfig.json
@@ -7,7 +7,7 @@
   },
   "include": ["./src"],
   "references": [
-    { "path": "../shared-base" },
+    { "path": "../shared-base-ui" },
     { "path": "../theme" },
     { "path": "../web3-shared/base" },
     { "path": "../typed-message/base" }
