--- a/packages/shared-base-ui/tsconfig.json
+++ b/packages/shared-base-ui/tsconfig.json
@@ -5,7 +5,7 @@
     "outDir": "./dist/",
     "tsBuildInfoFile": "./dist/.tsbuildinfo"
   },
-  "include": ["./src", "./src/**/*.json", "../shared/src/UI/components/ReverseAddress/index.tsx", "../shared/src/UI/components/ReverseAddress/index.tsx"],
+  "include": ["./src", "./src/**/*.json"],
   // Only type-level dependency.
   "references": [{ "path": "../public-api" }, { "path": "../shared-base" }]
 }
