refactor: move to use new decryption (#5867)
* feat: add decryptor from new infra

* refactor: use new decryption

* refactor: remove unused code

* fix: link not decrypted

* fix: build error

* chore: remove unused i18n

* fix: e2e decryption not reported

* chore: add in memory cache

--- a/packages/plugin-infra/tsconfig.json
+++ b/packages/plugin-infra/tsconfig.json
@@ -10,7 +10,8 @@
     { "path": "../shared-base-ui" },
     { "path": "../theme" },
     { "path": "../web3-shared/base" },
-    { "path": "../typed-message/base" }
+    { "path": "../typed-message/base" },
+    { "path": "../encryption" }
   ],
   "ts-node": {
     "swc": true,
