--- a/packages/plugins/EVM/package.json
+++ b/packages/plugins/EVM/package.json
@@ -6,13 +6,19 @@
   "dependencies": {
     "@masknet/icons": "workspace:*",
     "@masknet/plugin-infra": "workspace:*",
-    "@masknet/theme": "workspace:*",
     "@masknet/shared": "workspace:*",
     "@masknet/shared-base": "workspace:*",
+    "@masknet/theme": "workspace:*",
+    "@masknet/web3-constants": "workspace:*",
+    "@masknet/web3-contracts": "workspace:*",
     "@masknet/web3-providers": "workspace:*",
     "@masknet/web3-shared-base": "workspace:*",
     "@masknet/web3-shared-evm": "workspace:*",
     "bignumber.js": "^9.0.2",
-    "react-use": "^17.3.2"
+    "react-use": "^17.3.2",
+    "web3": "1.5.2",
+    "web3-core": "1.5.2",
+    "web3-core-helpers": "1.5.2",
+    "web3-utils": "^1.7.1"
   }
 }
