--- a/packages/plugins/EVM/package.json
+++ b/packages/plugins/EVM/package.json
@@ -19,6 +19,7 @@
     "web3": "1.5.2",
     "web3-core": "1.5.2",
     "web3-core-helpers": "1.5.2",
+    "web3-eth-abi": "1.5.2",
     "web3-utils": "^1.7.1"
   }
 }
