--- a/packages/plugins/Solana/package.json
+++ b/packages/plugins/Solana/package.json
@@ -4,6 +4,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "dependencies": {
+    "@bonfida/spl-name-service": "^0.1.27",
     "@masknet/icons": "workspace:*",
     "@masknet/injected-script": "workspace:*",
     "@masknet/plugin-infra": "workspace:*",
