--- a/packages/shared-base/package.json
+++ b/packages/shared-base/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@dimensiondev/holoflows-kit": "^0.9.0-20210902104757-7c3d0d0",
     "@masknet/typed-message": "workspace:*",
+    "@masknet/public-api": "workspace:*",
     "@msgpack/msgpack": "^2.7.2",
     "@mui/icons-material": "link:..\\empty",
     "@mui/lab": "link:..\\empty",
