--- a/packages/mask/background/tsconfig.json
+++ b/packages/mask/background/tsconfig.json
@@ -14,7 +14,6 @@
     { "path": "../shared" },
     { "path": "../utils-pure" },
     { "path": "../../encryption" },
-    { "path": "../../gun-utils" },
-    { "path": "../../plugins/Wallet" }
+    { "path": "../../gun-utils" }
   ]
 }
