--- a/packages/mask/shared/tsconfig.json
+++ b/packages/mask/shared/tsconfig.json
@@ -8,5 +8,5 @@
     "lib": ["ES2021"]
   },
   "include": ["./"],
-  "references": [{ "path": "../../shared-base" }, { "path": "../../plugins/Wallet" }]
+  "references": [{ "path": "../../shared-base" }]
 }
