--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -137,7 +137,7 @@
     "copy-webpack-plugin": "^10.2.4",
     "html-webpack-plugin": "^5.5.0",
     "react-devtools-core": "^4.24.1",
-    "react-refresh": "^0.12.0",
+    "react-refresh": "=0.11.0",
     "source-map-loader": "^3.0.1",
     "swc-loader": "^0.1.15",
     "webpack": "^5.70.0",
