--- a/packages/plugins/tsconfig.json
+++ b/packages/plugins/tsconfig.json
@@ -10,6 +10,6 @@
     { "path": "./RSS3/" },
     { "path": "./DAO/" },
     { "path": "./CyberConnect/" },
-    { "path": "./Test/" }
+    { "path": "./ENS/" }
   ]
 }
