--- a/packages/shared-base/package.json
+++ b/packages/shared-base/package.json
@@ -18,6 +18,8 @@
     "anchorme": "^2.1.2",
     "async-call-rpc": "^6.0.2",
     "bignumber.js": "^9.0.2",
+    "i18next": "^21.6.14",
+    "i18next-browser-languagedetector": "^6.1.4",
     "idb": "^7.0.1",
     "immer": "^9.0.12",
     "pvtsutils": "^1.2.2",
