--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -96,6 +96,7 @@
     "opensea-js": "^1.2.7",
     "promievent": "^0.1.4",
     "protobufjs": "^6.11.2",
+    "react-avatar-editor": "^12.0.0",
     "react-draggable": "^4.4.4",
     "react-feather": "^2.0.9",
     "react-highlight-words": "^0.17.0",
