--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@emotion/cache": "^11.7.1",
     "@emotion/react": "^11.8.2",
     "@emotion/serialize": "^1.0.2",
+    "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
     "@emotion/utils": "^1.1.0",
     "@mui/icons-material": "5.5.1",
