--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
   },
   "dependencies": {
     "@dimensiondev/kit": "0.0.0-20220228054820-f2378be",
-    "@emotion/cache": "^11.7.1",
-    "@emotion/react": "^11.8.2",
-    "@emotion/serialize": "^1.0.2",
-    "@emotion/server": "^11.4.0",
-    "@emotion/styled": "^11.8.1",
-    "@emotion/utils": "^1.1.0",
+    "@emotion/cache": "11.7.1",
+    "@emotion/react": "11.8.2",
+    "@emotion/serialize": "1.0.2",
+    "@emotion/server": "11.4.0",
+    "@emotion/styled": "11.8.1",
+    "@emotion/utils": "1.1.0",
     "@mui/icons-material": "5.5.1",
     "@mui/lab": "5.0.0-alpha.75",
     "@mui/material": "5.5.3",
