--- a/packages/mask/background/tsconfig.json
+++ b/packages/mask/background/tsconfig.json
@@ -14,6 +14,7 @@
     { "path": "../shared" },
     { "path": "../utils-pure" },
     { "path": "../../encryption" },
-    { "path": "../../gun-utils" }
+    { "path": "../../gun-utils" },
+    { "path": "../../web3-providers" }
   ]
 }
