--- a/packages/web3-shared/evm/tsconfig.json
+++ b/packages/web3-shared/evm/tsconfig.json
@@ -6,5 +6,10 @@
     "tsBuildInfoFile": "../dist/evm.tsbuildinfo"
   },
   "include": ["./", "./**/*.json"],
-  "references": [{ "path": "../base" }, { "path": "../../shared-base" }, { "path": "../../injected-script/sdk" }]
+  "references": [
+    { "path": "../base" },
+    { "path": "../../shared-base" },
+    { "path": "../../injected-script/sdk" },
+    { "path": "../../plugin-infra" }
+  ]
 }
