--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -49,8 +49,8 @@
     "use-subscription": "^1.6.0",
     "uuid": "^8.3.2",
     "wallet.ts": "^1.0.1",
-    "web3-core-helpers": "1.5.2",
-    "web3-utils": "^1.5.3",
+    "web3-core-helpers": "1.7.1",
+    "web3-utils": "1.7.1",
     "zod": "^3.14.3"
   },
   "devDependencies": {
