--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "17.0.14",
     "@types/web": "^0.0.60",
+    "@uniswap/v3-sdk": "3.3.2",
     "immer": "9.0.12",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
