--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-i18next": "^11.16.2",
-    "ses": "^0.15.11",
+    "ses": "0.15.11",
     "ts-results": "3.3.0",
     "web3-core": "1.7.1",
     "web3-core-method": "1.7.1"
