--- a/packages/polyfills/package.json
+++ b/packages/polyfills/package.json
@@ -9,6 +9,7 @@
     "@rollup/plugin-sucrase": "^4.0.2",
     "@types/node": "^17.0.23",
     "core-js-builder": "^3.21.1",
+    "regenerator-runtime": "^0.13.9",
     "rollup": "^2.70.1",
     "rollup-plugin-terser": "^7.0.2"
   },
