--- a/packages/mask/package.json
+++ b/packages/mask/package.json
@@ -25,11 +25,11 @@
     "@masknet/plugin-example": "workspace:*",
     "@masknet/plugin-file-service": "workspace:*",
     "@masknet/plugin-flow": "workspace:*",
+    "@masknet/plugin-go-plus-security": "workspace:*",
     "@masknet/plugin-infra": "workspace:*",
     "@masknet/plugin-rss3": "workspace:*",
     "@masknet/plugin-solana": "workspace:*",
     "@masknet/plugin-wallet": "workspace:*",
-    "@masknet/plugin-go-plus-security": "workspace:*",
     "@masknet/public-api": "workspace:*",
     "@masknet/sdk": "workspace:*",
     "@masknet/shared": "workspace:*",
@@ -96,6 +96,8 @@
     "opensea-js": "^1.2.7",
     "promievent": "^0.1.4",
     "protobufjs": "^6.11.2",
+    "react-dnd": "^16.0.0",
+    "react-dnd-html5-backend": "^16.0.0",
     "react-draggable": "^4.4.4",
     "react-feather": "^2.0.9",
     "react-highlight-words": "^0.17.0",
