--- a/packages/plugins/FileService/package.json
+++ b/packages/plugins/FileService/package.json
@@ -16,11 +16,11 @@
     "@masknet/typed-message": "workspace:*",
     "@msgpack/msgpack": "^2.7.2",
     "arweave": "^1.10.3",
-    "ipfs-http-client": "^54.0.2",
-    "urlcat": "^2.0.4",
     "date-fns": "^2.28.0",
+    "ipfs-http-client": "^54.0.2",
     "react-feather": "^2.0.9",
-    "react-router-dom": "^6.2.2",
-    "react-use": "^17.3.2"
+    "react-router-dom": "^6.3.0",
+    "react-use": "^17.3.2",
+    "urlcat": "^2.0.4"
   }
 }
