--- a/packages/plugins/Wallet/package.json
+++ b/packages/plugins/Wallet/package.json
@@ -1,14 +1,15 @@
 {
   "name": "@masknet/plugin-wallet",
   "private": true,
-  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js"
+      "webpack": "./src/index.ts",
+      "default": "./dist/index.js"
     },
     "./components": {
-      "import": "./dist/components.js"
+      "webpack": "./src/components.ts",
+      "default": "./dist/components.js"
     }
   },
   "typesVersions": {
