--- a/packages/plugins/FileService/package.json
+++ b/packages/plugins/FileService/package.json
@@ -1,7 +1,12 @@
 {
   "name": "@masknet/plugin-file-service",
   "private": true,
-  "main": "./dist/index.js",
+  "exports": {
+    ".": {
+      "webpack": "./src/index.ts",
+      "default": "./dist/index.js"
+    }
+  },
   "types": "./dist/index.d.ts",
   "dependencies": {
     "@dimensiondev/common-protocols": "1.6.0-20210723072221-8f46a92",
