--- a/packages/web3-providers/package.json
+++ b/packages/web3-providers/package.json
@@ -1,8 +1,13 @@
 {
   "name": "@masknet/web3-providers",
   "private": true,
-  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "webpack": "./src/index.ts",
+      "default": "./dist/index.js"
+    }
+  },
   "dependencies": {
     "@masknet/plugin-infra": "workspace:*",
     "@masknet/web3-constants": "workspace:*",
