--- a/packages/web3-shared/evm/package.json
+++ b/packages/web3-shared/evm/package.json
@@ -1,8 +1,13 @@
 {
   "name": "@masknet/web3-shared-evm",
   "private": true,
-  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "webpack": "./src/index.ts",
+      "default": "./dist/index.js"
+    }
+  },
   "sideEffects": false,
   "dependencies": {
     "@ensdomains/address-encoder": "^0.2.6",
