--- a/packages/web3-shared/flow/package.json
+++ b/packages/web3-shared/flow/package.json
@@ -4,8 +4,13 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "webpack": "./src/index.ts",
-      "default": "./dist/index.js"
+      "webpack": "./index.ts",
+      "default": "../dist/flow/index.js"
+    },
+    "./types": {
+      "types": "../dist/flow/types.d.ts",
+      "webpack": "./types.ts",
+      "default": "../dist/flow/types.js"
     }
   },
   "dependencies": {
