--- a/packages/external-plugin-previewer/package.json
+++ b/packages/external-plugin-previewer/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "exports": {
     ".": {
-      "webpack": "./src/index.ts",
+      "webpack": "./src/index.tsx",
       "default": "./dist/index.js"
     }
   },
