--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -6,7 +6,7 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "webpack": "./src/index.ts",
+      "webpack": "./index.ts",
       "default": "./dist/index.js"
     }
   },
