--- a/packages/plugins/CrossChainBridge/package.json
+++ b/packages/plugins/CrossChainBridge/package.json
@@ -12,6 +12,8 @@
         "@masknet/plugin-infra": "workspace:*",
         "@masknet/shared": "workspace:*",
         "@masknet/shared-base": "workspace:*",
+        "@masknet/shared-base-ui": "workspace:*",
+        "@masknet/theme": "workspace:*",
         "react-use": "^17.3.2"
     }
 }
