--- a/packages/plugins/FileService/package.json
+++ b/packages/plugins/FileService/package.json
@@ -19,6 +19,7 @@
     "@masknet/shared-base-ui": "workspace:*",
     "@masknet/theme": "workspace:*",
     "@masknet/typed-message": "workspace:*",
+    "@masknet/web3-shared-base": "workspace:*",
     "@msgpack/msgpack": "^2.7.2",
     "arweave": "^1.10.3",
     "date-fns": "^2.28.0",
