--- a/packages/web3-providers/package.json
+++ b/packages/web3-providers/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@masknet/plugin-infra": "workspace:*",
+    "@masknet/shared-base": "workspace:*",
     "@masknet/web3-constants": "workspace:*",
     "@masknet/web3-contracts": "workspace:*",
     "@masknet/web3-shared-base": "workspace:*",
