--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -66,9 +66,6 @@
     "@storybook/builder-webpack5": "^6.4.21",
     "@storybook/manager-webpack5": "^6.4.21",
     "@storybook/react": "^6.4.21",
-    "babel-loader": "^8.2.4",
-    "buffer": "^6.0.3",
-    "path-browserify": "^1.0.1",
-    "stream-browserify": "^3.0.0"
+    "babel-loader": "^8.2.4"
   }
 }
